--- a/css/ulostyle.css
+++ b/css/ulostyle.css
@@ -300,22 +300,31 @@ a {
   text-shadow: 3px 3px 7px #f44336;
 }
 
-.gaya-tabel-1-us-merah {
+.gaya-tabel-1-us-merah, .gaya-tabel-2-us-merah {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-merah td,
-.gaya-tabel-1-us-merah th {
+.gaya-tabel-1-us-merah td, .gaya-tabel-2-us-merah td,
+.gaya-tabel-1-us-merah th,
+.gaya-tabel-2-us-merah th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-merah tr:nth-child {
+.gaya-tabel-1-us-merah tr:nth-child, .gaya-tabel-2-us-merah tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-merah tr:hover {
+.gaya-tabel-1-us-merah tr:hover, .gaya-tabel-2-us-merah tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-merah th {
+.gaya-tabel-1-us-merah th, .gaya-tabel-2-us-merah th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #f44336;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-merah tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -371,22 +380,31 @@ a {
   text-shadow: 3px 3px 7px #e91e63;
 }
 
-.gaya-tabel-1-us-merahjambu {
+.gaya-tabel-1-us-merahjambu, .gaya-tabel-2-us-merahjambu {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-merahjambu td,
-.gaya-tabel-1-us-merahjambu th {
+.gaya-tabel-1-us-merahjambu td, .gaya-tabel-2-us-merahjambu td,
+.gaya-tabel-1-us-merahjambu th,
+.gaya-tabel-2-us-merahjambu th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-merahjambu tr:nth-child {
+.gaya-tabel-1-us-merahjambu tr:nth-child, .gaya-tabel-2-us-merahjambu tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-merahjambu tr:hover {
+.gaya-tabel-1-us-merahjambu tr:hover, .gaya-tabel-2-us-merahjambu tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-merahjambu th {
+.gaya-tabel-1-us-merahjambu th, .gaya-tabel-2-us-merahjambu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #e91e63;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-merahjambu tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -442,22 +460,31 @@ a {
   text-shadow: 3px 3px 7px #9c27b0;
 }
 
-.gaya-tabel-1-us-ungu {
+.gaya-tabel-1-us-ungu, .gaya-tabel-2-us-ungu {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-ungu td,
-.gaya-tabel-1-us-ungu th {
+.gaya-tabel-1-us-ungu td, .gaya-tabel-2-us-ungu td,
+.gaya-tabel-1-us-ungu th,
+.gaya-tabel-2-us-ungu th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-ungu tr:nth-child {
+.gaya-tabel-1-us-ungu tr:nth-child, .gaya-tabel-2-us-ungu tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-ungu tr:hover {
+.gaya-tabel-1-us-ungu tr:hover, .gaya-tabel-2-us-ungu tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-ungu th {
+.gaya-tabel-1-us-ungu th, .gaya-tabel-2-us-ungu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #9c27b0;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-ungu tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -513,22 +540,31 @@ a {
   text-shadow: 3px 3px 7px #673ab7;
 }
 
-.gaya-tabel-1-us-ungupekat {
+.gaya-tabel-1-us-ungupekat, .gaya-tabel-2-us-ungupekat {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-ungupekat td,
-.gaya-tabel-1-us-ungupekat th {
+.gaya-tabel-1-us-ungupekat td, .gaya-tabel-2-us-ungupekat td,
+.gaya-tabel-1-us-ungupekat th,
+.gaya-tabel-2-us-ungupekat th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-ungupekat tr:nth-child {
+.gaya-tabel-1-us-ungupekat tr:nth-child, .gaya-tabel-2-us-ungupekat tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-ungupekat tr:hover {
+.gaya-tabel-1-us-ungupekat tr:hover, .gaya-tabel-2-us-ungupekat tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-ungupekat th {
+.gaya-tabel-1-us-ungupekat th, .gaya-tabel-2-us-ungupekat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #673ab7;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-ungupekat tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -584,22 +620,31 @@ a {
   text-shadow: 3px 3px 7px #3f51b5;
 }
 
-.gaya-tabel-1-us-indigo {
+.gaya-tabel-1-us-indigo, .gaya-tabel-2-us-indigo {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-indigo td,
-.gaya-tabel-1-us-indigo th {
+.gaya-tabel-1-us-indigo td, .gaya-tabel-2-us-indigo td,
+.gaya-tabel-1-us-indigo th,
+.gaya-tabel-2-us-indigo th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-indigo tr:nth-child {
+.gaya-tabel-1-us-indigo tr:nth-child, .gaya-tabel-2-us-indigo tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-indigo tr:hover {
+.gaya-tabel-1-us-indigo tr:hover, .gaya-tabel-2-us-indigo tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-indigo th {
+.gaya-tabel-1-us-indigo th, .gaya-tabel-2-us-indigo th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #3f51b5;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-indigo tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -655,22 +700,31 @@ a {
   text-shadow: 3px 3px 7px #2196f3;
 }
 
-.gaya-tabel-1-us-biru {
+.gaya-tabel-1-us-biru, .gaya-tabel-2-us-biru {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-biru td,
-.gaya-tabel-1-us-biru th {
+.gaya-tabel-1-us-biru td, .gaya-tabel-2-us-biru td,
+.gaya-tabel-1-us-biru th,
+.gaya-tabel-2-us-biru th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-biru tr:nth-child {
+.gaya-tabel-1-us-biru tr:nth-child, .gaya-tabel-2-us-biru tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-biru tr:hover {
+.gaya-tabel-1-us-biru tr:hover, .gaya-tabel-2-us-biru tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-biru th {
+.gaya-tabel-1-us-biru th, .gaya-tabel-2-us-biru th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #2196f3;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-biru tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -726,22 +780,31 @@ a {
   text-shadow: 3px 3px 7px #03a9f4;
 }
 
-.gaya-tabel-1-us-birumuda {
+.gaya-tabel-1-us-birumuda, .gaya-tabel-2-us-birumuda {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-birumuda td,
-.gaya-tabel-1-us-birumuda th {
+.gaya-tabel-1-us-birumuda td, .gaya-tabel-2-us-birumuda td,
+.gaya-tabel-1-us-birumuda th,
+.gaya-tabel-2-us-birumuda th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-birumuda tr:nth-child {
+.gaya-tabel-1-us-birumuda tr:nth-child, .gaya-tabel-2-us-birumuda tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-birumuda tr:hover {
+.gaya-tabel-1-us-birumuda tr:hover, .gaya-tabel-2-us-birumuda tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-birumuda th {
+.gaya-tabel-1-us-birumuda th, .gaya-tabel-2-us-birumuda th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #03a9f4;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-birumuda tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -797,22 +860,31 @@ a {
   text-shadow: 3px 3px 7px #00bcd4;
 }
 
-.gaya-tabel-1-us-cyan {
+.gaya-tabel-1-us-cyan, .gaya-tabel-2-us-cyan {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-cyan td,
-.gaya-tabel-1-us-cyan th {
+.gaya-tabel-1-us-cyan td, .gaya-tabel-2-us-cyan td,
+.gaya-tabel-1-us-cyan th,
+.gaya-tabel-2-us-cyan th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-cyan tr:nth-child {
+.gaya-tabel-1-us-cyan tr:nth-child, .gaya-tabel-2-us-cyan tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-cyan tr:hover {
+.gaya-tabel-1-us-cyan tr:hover, .gaya-tabel-2-us-cyan tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-cyan th {
+.gaya-tabel-1-us-cyan th, .gaya-tabel-2-us-cyan th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #00bcd4;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-cyan tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -868,22 +940,31 @@ a {
   text-shadow: 3px 3px 7px #009688;
 }
 
-.gaya-tabel-1-us-teal {
+.gaya-tabel-1-us-teal, .gaya-tabel-2-us-teal {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-teal td,
-.gaya-tabel-1-us-teal th {
+.gaya-tabel-1-us-teal td, .gaya-tabel-2-us-teal td,
+.gaya-tabel-1-us-teal th,
+.gaya-tabel-2-us-teal th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-teal tr:nth-child {
+.gaya-tabel-1-us-teal tr:nth-child, .gaya-tabel-2-us-teal tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-teal tr:hover {
+.gaya-tabel-1-us-teal tr:hover, .gaya-tabel-2-us-teal tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-teal th {
+.gaya-tabel-1-us-teal th, .gaya-tabel-2-us-teal th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #009688;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-teal tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -939,22 +1020,31 @@ a {
   text-shadow: 3px 3px 7px #4caf50;
 }
 
-.gaya-tabel-1-us-hijau {
+.gaya-tabel-1-us-hijau, .gaya-tabel-2-us-hijau {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-hijau td,
-.gaya-tabel-1-us-hijau th {
+.gaya-tabel-1-us-hijau td, .gaya-tabel-2-us-hijau td,
+.gaya-tabel-1-us-hijau th,
+.gaya-tabel-2-us-hijau th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-hijau tr:nth-child {
+.gaya-tabel-1-us-hijau tr:nth-child, .gaya-tabel-2-us-hijau tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-hijau tr:hover {
+.gaya-tabel-1-us-hijau tr:hover, .gaya-tabel-2-us-hijau tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-hijau th {
+.gaya-tabel-1-us-hijau th, .gaya-tabel-2-us-hijau th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4caf50;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-hijau tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1010,22 +1100,31 @@ a {
   text-shadow: 3px 3px 7px #8bc34a;
 }
 
-.gaya-tabel-1-us-hijaumuda {
+.gaya-tabel-1-us-hijaumuda, .gaya-tabel-2-us-hijaumuda {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-hijaumuda td,
-.gaya-tabel-1-us-hijaumuda th {
+.gaya-tabel-1-us-hijaumuda td, .gaya-tabel-2-us-hijaumuda td,
+.gaya-tabel-1-us-hijaumuda th,
+.gaya-tabel-2-us-hijaumuda th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-hijaumuda tr:nth-child {
+.gaya-tabel-1-us-hijaumuda tr:nth-child, .gaya-tabel-2-us-hijaumuda tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-hijaumuda tr:hover {
+.gaya-tabel-1-us-hijaumuda tr:hover, .gaya-tabel-2-us-hijaumuda tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-hijaumuda th {
+.gaya-tabel-1-us-hijaumuda th, .gaya-tabel-2-us-hijaumuda th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #8bc34a;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-hijaumuda tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1081,22 +1180,32 @@ a {
   text-shadow: 3px 3px 7px #cddc39;
 }
 
-.gaya-tabel-1-us-lemon {
+.gaya-tabel-1-us-lemon, .gaya-tabel-2-us-lemon {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-lemon td,
-.gaya-tabel-1-us-lemon th {
+.gaya-tabel-1-us-lemon td, .gaya-tabel-2-us-lemon td,
+.gaya-tabel-1-us-lemon th,
+.gaya-tabel-2-us-lemon th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-lemon tr:nth-child {
+.gaya-tabel-1-us-lemon tr:nth-child, .gaya-tabel-2-us-lemon tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-lemon tr:hover {
+.gaya-tabel-1-us-lemon tr:hover, .gaya-tabel-2-us-lemon tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-lemon th {
+.gaya-tabel-1-us-lemon th, .gaya-tabel-2-us-lemon th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #cddc39;
+  color: #f8feff;
+  color: #212529;
+}
+
+.gaya-tabel-2-us-lemon tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1153,22 +1262,32 @@ a {
   text-shadow: 3px 3px 7px #ffeb3b;
 }
 
-.gaya-tabel-1-us-kuning {
+.gaya-tabel-1-us-kuning, .gaya-tabel-2-us-kuning {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-kuning td,
-.gaya-tabel-1-us-kuning th {
+.gaya-tabel-1-us-kuning td, .gaya-tabel-2-us-kuning td,
+.gaya-tabel-1-us-kuning th,
+.gaya-tabel-2-us-kuning th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-kuning tr:nth-child {
+.gaya-tabel-1-us-kuning tr:nth-child, .gaya-tabel-2-us-kuning tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-kuning tr:hover {
+.gaya-tabel-1-us-kuning tr:hover, .gaya-tabel-2-us-kuning tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-kuning th {
+.gaya-tabel-1-us-kuning th, .gaya-tabel-2-us-kuning th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ffeb3b;
+  color: #f8feff;
+  color: #212529;
+}
+
+.gaya-tabel-2-us-kuning tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1225,22 +1344,32 @@ a {
   text-shadow: 3px 3px 7px #ffc107;
 }
 
-.gaya-tabel-1-us-amber {
+.gaya-tabel-1-us-amber, .gaya-tabel-2-us-amber {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-amber td,
-.gaya-tabel-1-us-amber th {
+.gaya-tabel-1-us-amber td, .gaya-tabel-2-us-amber td,
+.gaya-tabel-1-us-amber th,
+.gaya-tabel-2-us-amber th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-amber tr:nth-child {
+.gaya-tabel-1-us-amber tr:nth-child, .gaya-tabel-2-us-amber tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-amber tr:hover {
+.gaya-tabel-1-us-amber tr:hover, .gaya-tabel-2-us-amber tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-amber th {
+.gaya-tabel-1-us-amber th, .gaya-tabel-2-us-amber th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ffc107;
+  color: #f8feff;
+  color: #212529;
+}
+
+.gaya-tabel-2-us-amber tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1297,22 +1426,31 @@ a {
   text-shadow: 3px 3px 7px #ff9800;
 }
 
-.gaya-tabel-1-us-jingga {
+.gaya-tabel-1-us-jingga, .gaya-tabel-2-us-jingga {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-jingga td,
-.gaya-tabel-1-us-jingga th {
+.gaya-tabel-1-us-jingga td, .gaya-tabel-2-us-jingga td,
+.gaya-tabel-1-us-jingga th,
+.gaya-tabel-2-us-jingga th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-jingga tr:nth-child {
+.gaya-tabel-1-us-jingga tr:nth-child, .gaya-tabel-2-us-jingga tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-jingga tr:hover {
+.gaya-tabel-1-us-jingga tr:hover, .gaya-tabel-2-us-jingga tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-jingga th {
+.gaya-tabel-1-us-jingga th, .gaya-tabel-2-us-jingga th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff9800;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-jingga tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1368,22 +1506,31 @@ a {
   text-shadow: 3px 3px 7px #ff5722;
 }
 
-.gaya-tabel-1-us-jinggapekat {
+.gaya-tabel-1-us-jinggapekat, .gaya-tabel-2-us-jinggapekat {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-jinggapekat td,
-.gaya-tabel-1-us-jinggapekat th {
+.gaya-tabel-1-us-jinggapekat td, .gaya-tabel-2-us-jinggapekat td,
+.gaya-tabel-1-us-jinggapekat th,
+.gaya-tabel-2-us-jinggapekat th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-jinggapekat tr:nth-child {
+.gaya-tabel-1-us-jinggapekat tr:nth-child, .gaya-tabel-2-us-jinggapekat tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-jinggapekat tr:hover {
+.gaya-tabel-1-us-jinggapekat tr:hover, .gaya-tabel-2-us-jinggapekat tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-jinggapekat th {
+.gaya-tabel-1-us-jinggapekat th, .gaya-tabel-2-us-jinggapekat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #ff5722;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-jinggapekat tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1439,22 +1586,31 @@ a {
   text-shadow: 3px 3px 7px #795548;
 }
 
-.gaya-tabel-1-us-cokelat {
+.gaya-tabel-1-us-cokelat, .gaya-tabel-2-us-cokelat {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-cokelat td,
-.gaya-tabel-1-us-cokelat th {
+.gaya-tabel-1-us-cokelat td, .gaya-tabel-2-us-cokelat td,
+.gaya-tabel-1-us-cokelat th,
+.gaya-tabel-2-us-cokelat th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-cokelat tr:nth-child {
+.gaya-tabel-1-us-cokelat tr:nth-child, .gaya-tabel-2-us-cokelat tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-cokelat tr:hover {
+.gaya-tabel-1-us-cokelat tr:hover, .gaya-tabel-2-us-cokelat tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-cokelat th {
+.gaya-tabel-1-us-cokelat th, .gaya-tabel-2-us-cokelat th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #795548;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-cokelat tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1510,22 +1666,32 @@ a {
   text-shadow: 3px 3px 7px #9e9e9e;
 }
 
-.gaya-tabel-1-us-abuabu {
+.gaya-tabel-1-us-abuabu, .gaya-tabel-2-us-abuabu {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-abuabu td,
-.gaya-tabel-1-us-abuabu th {
+.gaya-tabel-1-us-abuabu td, .gaya-tabel-2-us-abuabu td,
+.gaya-tabel-1-us-abuabu th,
+.gaya-tabel-2-us-abuabu th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-abuabu tr:nth-child {
+.gaya-tabel-1-us-abuabu tr:nth-child, .gaya-tabel-2-us-abuabu tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-abuabu tr:hover {
+.gaya-tabel-1-us-abuabu tr:hover, .gaya-tabel-2-us-abuabu tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-abuabu th {
+.gaya-tabel-1-us-abuabu th, .gaya-tabel-2-us-abuabu th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #9e9e9e;
+  color: #f8feff;
+  color: #212529;
+}
+
+.gaya-tabel-2-us-abuabu tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
@@ -1582,22 +1748,31 @@ a {
   text-shadow: 3px 3px 7px #607d8b;
 }
 
-.gaya-tabel-1-us-abuabubiru {
+.gaya-tabel-1-us-abuabubiru, .gaya-tabel-2-us-abuabubiru {
   border-collapse: collapse;
   width: 100%;
 }
-.gaya-tabel-1-us-abuabubiru td,
-.gaya-tabel-1-us-abuabubiru th {
+.gaya-tabel-1-us-abuabubiru td, .gaya-tabel-2-us-abuabubiru td,
+.gaya-tabel-1-us-abuabubiru th,
+.gaya-tabel-2-us-abuabubiru th {
   border: 1px solid #9e9e9e;
   padding: 8px;
 }
-.gaya-tabel-1-us-abuabubiru tr:nth-child {
+.gaya-tabel-1-us-abuabubiru tr:nth-child, .gaya-tabel-2-us-abuabubiru tr:nth-child {
   background-color: #f8feff;
 }
-.gaya-tabel-1-us-abuabubiru tr:hover {
+.gaya-tabel-1-us-abuabubiru tr:hover, .gaya-tabel-2-us-abuabubiru tr:hover {
   background-color: #9e9e9e;
 }
-.gaya-tabel-1-us-abuabubiru th {
+.gaya-tabel-1-us-abuabubiru th, .gaya-tabel-2-us-abuabubiru th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #607d8b;
+  color: #f8feff;
+}
+
+.gaya-tabel-2-us-abuabubiru tr:last-child td {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: left;
